# GoFileDownloader

./: .pre-commit-config.yaml  README.md  downloader.py  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  download_utils.py  gofile_utils.py  ui.py
